Added average distance of clusters from the proposed cluster label.

--- a/experiments/clustering/clustering.ipynb
+++ b/experiments/clustering/clustering.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,6 +492,9 @@
     "        # Get the label of the cluster\n",
     "        label_dict[key] = list(expected_clusters[\"annotations\"][0][\"result\"])[min_distance_index]['value']['rectanglelabels'][0]\n",
     "\n",
+    "        # Add the distance to the dictionary\n",
+    "        label_dict[key] = {\"label\": label_dict[key], \"distance\": min(distances)}\n",
+    "\n",
     "    return label_dict"
    ]
   },
@@ -504,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
@@ -914,14 +917,14 @@
      "output_type": "stream",
      "text": [
       "Method: kmeans\n",
-      "Time labels: 775 correct clusters, 4 incorrect clusters. The accuracy is 99.49%\n",
-      "Number labels: 371 correct clusters, 3 incorrect clusters. The accuracy is 99.20%\n",
+      "Time labels: 774 correct clusters, 7 incorrect clusters. The accuracy is 99.10%. Average distance when correct: 4.93px, incorrect: 7.61px, and overall: 4.95px\n",
+      "Number labels: 369 correct clusters, 1 incorrect clusters. The accuracy is 99.73%. Average distance when correct: 6.15px, incorrect: 4.56px, and overall: 6.15px\n",
       "Method: dbscan\n",
-      "Time labels: 782 correct clusters, 44 incorrect clusters. The accuracy is 94.67%\n",
-      "Number labels: 342 correct clusters, 12 incorrect clusters. The accuracy is 96.61%\n",
+      "Time labels: 785 correct clusters, 28 incorrect clusters. The accuracy is 96.56%. Average distance when correct: 4.85px, incorrect: 7.44px, and overall: 4.94px\n",
+      "Number labels: 355 correct clusters, 11 incorrect clusters. The accuracy is 96.99%. Average distance when correct: 6.13px, incorrect: 5.46px, and overall: 6.11px\n",
       "Method: agglomerative\n",
-      "Time labels: 779 correct clusters, 7 incorrect clusters. The accuracy is 99.11%\n",
-      "Number labels: 366 correct clusters, 11 incorrect clusters. The accuracy is 97.08%\n"
+      "Time labels: 776 correct clusters, 8 incorrect clusters. The accuracy is 98.98%. Average distance when correct: 4.86px, incorrect: 8.04px, and overall: 4.89px\n",
+      "Number labels: 363 correct clusters, 11 incorrect clusters. The accuracy is 97.06%. Average distance when correct: 6.21px, incorrect: 4.88px, and overall: 6.17px\n"
      ]
     }
    ],
@@ -940,6 +943,10 @@
     "    number_correct_clusters_count = 0\n",
     "\n",
     "    # Iterate over all images and their bounding boxes\n",
+    "    number_distance_values = []\n",
+    "    time_distance_values = []\n",
+    "    number_distance_values_erroneous = []\n",
+    "    time_distance_values_erroneous = []\n",
     "    for sheet, yolo_bb in yolo_data.items():\n",
     "        full_image_path = os.path.join(PATH_TO_REGISTERED_IMAGES, sheet)\n",
     "        time_bounding_boxes, number_bounding_boxes = select_relevant_bounding_boxes(\n",
@@ -1022,15 +1029,17 @@
     "        # We know what integers should be represented in the time labels, lets check that they are all there.\n",
     "        # Keep track of any false positives (new clusters that don't exist) or negatives (missing clusters)\n",
     "        for cluster, value in time_clusters.items():\n",
-    "            if value not in expected_time_values:\n",
+    "            if value['label'] not in expected_time_values:\n",
     "                # Print the sheet, value that is not in the expected values\n",
     "                # print(f\"Time -> Sheet: {sheet}, Value: {value}\")\n",
     "                # We have an erroneous cluster\n",
     "                time_wrong_clusters_count += 1\n",
+    "                time_distance_values_erroneous.append(value['distance'])\n",
     "            else:\n",
     "                # We have a correct cluster\n",
-    "                expected_time_values.remove(value)\n",
+    "                expected_time_values.remove(value['label'])\n",
     "                time_correct_clusters_count += 1\n",
+    "                time_distance_values.append(value['distance'])\n",
     "\n",
     "        # Load JSON\n",
     "        with open(os.path.join(NUMBER_JSON, f\"{sheet.split('.')[0]}.json\")) as f:\n",
@@ -1040,20 +1049,22 @@
     "        # We know what integers should be represented in the time labels, lets check that they are all there.\n",
     "        # Keep track of any false positives (new clusters that don't exist) or negatives (missing clusters)\n",
     "        for cluster, value in number_clusters.items():\n",
-    "            if value not in expected_number_values:\n",
+    "            if value['label'] not in expected_number_values:\n",
     "                # print(f\"Time -> Sheet: {sheet}, Value: {value}\")\n",
     "                # We have an erroneous cluster\n",
     "                number_wrong_clusters_count += 1\n",
+    "                number_distance_values_erroneous.append(value['distance'])\n",
     "            else:\n",
     "                # We have a correct cluster\n",
-    "                expected_number_values.remove(value)\n",
+    "                expected_number_values.remove(value['label'])\n",
     "                number_correct_clusters_count += 1\n",
+    "                number_distance_values.append(value['distance'])\n",
     "\n",
     "    print(\n",
-    "        f\"Time labels: {time_correct_clusters_count} correct clusters, {time_wrong_clusters_count} incorrect clusters. The accuracy is {time_correct_clusters_count / (time_correct_clusters_count + time_wrong_clusters_count) * 100:.2f}%\"\n",
+    "        f\"Time labels: {time_correct_clusters_count} correct clusters, {time_wrong_clusters_count} incorrect clusters. The accuracy is {time_correct_clusters_count / (time_correct_clusters_count + time_wrong_clusters_count) * 100:.2f}%. Average distance when correct: {sum(time_distance_values) / len(time_distance_values):.2f}px, incorrect: {sum(time_distance_values_erroneous) / len(time_distance_values_erroneous):.2f}px, and overall: {sum(time_distance_values + time_distance_values_erroneous) / (len(time_distance_values) + len(time_distance_values_erroneous)):.2f}px\"\n",
     "    )\n",
     "    print(\n",
-    "        f\"Number labels: {number_correct_clusters_count} correct clusters, {number_wrong_clusters_count} incorrect clusters. The accuracy is {number_correct_clusters_count / (number_correct_clusters_count + number_wrong_clusters_count) * 100:.2f}%\"\n",
+    "        f\"Number labels: {number_correct_clusters_count} correct clusters, {number_wrong_clusters_count} incorrect clusters. The accuracy is {number_correct_clusters_count / (number_correct_clusters_count + number_wrong_clusters_count) * 100:.2f}%. Average distance when correct: {sum(number_distance_values) / len(number_distance_values):.2f}px, incorrect: {sum(number_distance_values_erroneous) / len(number_distance_values_erroneous):.2f}px, and overall: {sum(number_distance_values + number_distance_values_erroneous) / (len(number_distance_values) + len(number_distance_values_erroneous)):.2f}px\"\n",
     "    )\n"
    ]
   },
