Improved method of calculating accuracy to include undetected clusters not just incorrect clusters.

--- a/experiments/clustering/clustering.ipynb
+++ b/experiments/clustering/clustering.ipynb
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -917,14 +917,35 @@
      "output_type": "stream",
      "text": [
       "Method: kmeans\n",
-      "Time labels: 774 correct clusters, 7 incorrect clusters. The accuracy is 99.10%. Average distance when correct: 4.93px, incorrect: 7.61px, and overall: 4.95px\n",
-      "Number labels: 369 correct clusters, 1 incorrect clusters. The accuracy is 99.73%. Average distance when correct: 6.15px, incorrect: 4.56px, and overall: 6.15px\n",
+      "Time labels: 774 correct clusters, 7 incorrect clusters. There were 24 undetected clusters. The accuracy is 63.67%.\n",
+      "Average distance when correct: 4.93px, incorrect: 7.61px, and overall: 4.95px\n",
+      "\n",
+      "\n",
+      "Number labels: 369 correct clusters, 1 incorrect clusters. There were 11 undetected clusters. The accuracy is 30.39%.\n",
+      "Average distance when correct: 6.15px, incorrect: 4.56px, and overall: 6.15px\n",
+      "\n",
+      "\n",
+      "\n",
       "Method: dbscan\n",
-      "Time labels: 785 correct clusters, 28 incorrect clusters. The accuracy is 96.56%. Average distance when correct: 4.85px, incorrect: 7.44px, and overall: 4.94px\n",
-      "Number labels: 355 correct clusters, 11 incorrect clusters. The accuracy is 96.99%. Average distance when correct: 6.13px, incorrect: 5.46px, and overall: 6.11px\n",
+      "Time labels: 785 correct clusters, 28 incorrect clusters. There were 13 undetected clusters. The accuracy is 65.53%.\n",
+      "Average distance when correct: 4.85px, incorrect: 7.44px, and overall: 4.94px\n",
+      "\n",
+      "\n",
+      "Number labels: 355 correct clusters, 11 incorrect clusters. There were 25 undetected clusters. The accuracy is 28.01%.\n",
+      "Average distance when correct: 6.13px, incorrect: 5.46px, and overall: 6.11px\n",
+      "\n",
+      "\n",
+      "\n",
       "Method: agglomerative\n",
-      "Time labels: 776 correct clusters, 8 incorrect clusters. The accuracy is 98.98%. Average distance when correct: 4.86px, incorrect: 8.04px, and overall: 4.89px\n",
-      "Number labels: 363 correct clusters, 11 incorrect clusters. The accuracy is 97.06%. Average distance when correct: 6.21px, incorrect: 4.88px, and overall: 6.17px\n"
+      "Time labels: 776 correct clusters, 8 incorrect clusters. There were 22 undetected clusters. The accuracy is 64.01%.\n",
+      "Average distance when correct: 4.86px, incorrect: 8.04px, and overall: 4.89px\n",
+      "\n",
+      "\n",
+      "Number labels: 363 correct clusters, 11 incorrect clusters. There were 17 undetected clusters. The accuracy is 29.37%.\n",
+      "Average distance when correct: 6.21px, incorrect: 4.88px, and overall: 6.17px\n",
+      "\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -947,6 +968,9 @@
     "    time_distance_values = []\n",
     "    number_distance_values_erroneous = []\n",
     "    time_distance_values_erroneous = []\n",
+    "    # Undetected clusters\n",
+    "    undetected_time_clusters = []\n",
+    "    undetected_number_clusters = []\n",
     "    for sheet, yolo_bb in yolo_data.items():\n",
     "        full_image_path = os.path.join(PATH_TO_REGISTERED_IMAGES, sheet)\n",
     "        time_bounding_boxes, number_bounding_boxes = select_relevant_bounding_boxes(\n",
@@ -1040,6 +1064,8 @@
     "                expected_time_values.remove(value['label'])\n",
     "                time_correct_clusters_count += 1\n",
     "                time_distance_values.append(value['distance'])\n",
+    "        \n",
+    "        undetected_time_clusters += expected_time_values\n",
     "\n",
     "        # Load JSON\n",
     "        with open(os.path.join(NUMBER_JSON, f\"{sheet.split('.')[0]}.json\")) as f:\n",
@@ -1060,20 +1086,17 @@
     "                number_correct_clusters_count += 1\n",
     "                number_distance_values.append(value['distance'])\n",
     "\n",
+    "        undetected_number_clusters += expected_number_values\n",
+    "\n",
     "    print(\n",
-    "        f\"Time labels: {time_correct_clusters_count} correct clusters, {time_wrong_clusters_count} incorrect clusters. The accuracy is {time_correct_clusters_count / (time_correct_clusters_count + time_wrong_clusters_count) * 100:.2f}%. Average distance when correct: {sum(time_distance_values) / len(time_distance_values):.2f}px, incorrect: {sum(time_distance_values_erroneous) / len(time_distance_values_erroneous):.2f}px, and overall: {sum(time_distance_values + time_distance_values_erroneous) / (len(time_distance_values) + len(time_distance_values_erroneous)):.2f}px\"\n",
+    "        f\"Time labels: {time_correct_clusters_count} correct clusters, {time_wrong_clusters_count} incorrect clusters. There were {len(undetected_time_clusters)} undetected clusters. The accuracy is {(time_correct_clusters_count - len(undetected_time_clusters)) / (42 * 19) * 100:.2f}%.\\nAverage distance when correct: {sum(time_distance_values) / len(time_distance_values):.2f}px, incorrect: {sum(time_distance_values_erroneous) / len(time_distance_values_erroneous):.2f}px, and overall: {sum(time_distance_values + time_distance_values_erroneous) / (len(time_distance_values) + len(time_distance_values_erroneous)):.2f}px\"\n",
     "    )\n",
+    "    print(\"\\n\")\n",
     "    print(\n",
-    "        f\"Number labels: {number_correct_clusters_count} correct clusters, {number_wrong_clusters_count} incorrect clusters. The accuracy is {number_correct_clusters_count / (number_correct_clusters_count + number_wrong_clusters_count) * 100:.2f}%. Average distance when correct: {sum(number_distance_values) / len(number_distance_values):.2f}px, incorrect: {sum(number_distance_values_erroneous) / len(number_distance_values_erroneous):.2f}px, and overall: {sum(number_distance_values + number_distance_values_erroneous) / (len(number_distance_values) + len(number_distance_values_erroneous)):.2f}px\"\n",
-    "    )\n"
+    "        f\"Number labels: {number_correct_clusters_count} correct clusters, {number_wrong_clusters_count} incorrect clusters. There were {len(undetected_number_clusters)} undetected clusters. The accuracy is {(number_correct_clusters_count - len(undetected_number_clusters)) / (20 * 19) * 100:.2f}%.\\nAverage distance when correct: {sum(number_distance_values) / len(number_distance_values):.2f}px, incorrect: {sum(number_distance_values_erroneous) / len(number_distance_values_erroneous):.2f}px, and overall: {sum(number_distance_values + number_distance_values_erroneous) / (len(number_distance_values) + len(number_distance_values_erroneous)):.2f}px\"\n",
+    "    )\n",
+    "    print(\"\\n\\n\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
