Normalized erroneous bounding box method.

--- a/experiments/clustering/clustering.ipynb
+++ b/experiments/clustering/clustering.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,89 +625,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sheet: RC_0001_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0001_intraoperative.JPG\n",
-      "Sheet: RC_0002_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0002_intraoperative.JPG\n",
-      "Sheet: RC_0003_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0003_intraoperative.JPG\n",
-      "Sheet: RC_0004_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0004_intraoperative.JPG\n",
-      "Sheet: RC_0005_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0005_intraoperative.JPG\n",
-      "Sheet: RC_0006_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0006_intraoperative.JPG\n",
-      "Sheet: RC_0007_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0007_intraoperative.JPG\n",
-      "Sheet: RC_0008_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0008_intraoperative.JPG\n",
-      "Sheet: RC_0009_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0009_intraoperative.JPG\n",
-      "Sheet: RC_0010_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0010_intraoperative.JPG\n",
-      "Sheet: RC_0011_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0011_intraoperative.JPG\n",
-      "Sheet: RC_0012_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0012_intraoperative.JPG\n",
-      "Sheet: RC_0013_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0013_intraoperative.JPG\n",
-      "Sheet: RC_0014_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0014_intraoperative.JPG\n",
-      "Sheet: RC_0015_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0015_intraoperative.JPG\n",
-      "Sheet: RC_0016_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0016_intraoperative.JPG\n",
-      "Sheet: RC_0017_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0017_intraoperative.JPG\n",
-      "Sheet: RC_0018_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0018_intraoperative.JPG\n",
-      "Sheet: RC_0019_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0019_intraoperative.JPG\n",
-      "Sheet: RC_0001_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0001_intraoperative.JPG\n",
-      "Sheet: RC_0002_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0002_intraoperative.JPG\n",
-      "Sheet: RC_0003_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0003_intraoperative.JPG\n",
-      "Sheet: RC_0004_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0004_intraoperative.JPG\n",
-      "Sheet: RC_0005_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0005_intraoperative.JPG\n",
-      "Sheet: RC_0006_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0006_intraoperative.JPG\n",
-      "Sheet: RC_0007_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0007_intraoperative.JPG\n",
-      "Sheet: RC_0008_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0008_intraoperative.JPG\n",
-      "Sheet: RC_0009_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0009_intraoperative.JPG\n",
-      "Sheet: RC_0010_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0010_intraoperative.JPG\n",
-      "Sheet: RC_0011_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0011_intraoperative.JPG\n",
-      "Sheet: RC_0012_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0012_intraoperative.JPG\n",
-      "Sheet: RC_0013_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0013_intraoperative.JPG\n",
-      "Sheet: RC_0014_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0014_intraoperative.JPG\n",
-      "Sheet: RC_0015_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0015_intraoperative.JPG\n",
-      "Sheet: RC_0016_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0016_intraoperative.JPG\n",
-      "Sheet: RC_0017_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0017_intraoperative.JPG\n",
-      "Sheet: RC_0018_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0018_intraoperative.JPG\n",
-      "Sheet: RC_0019_intraoperative.JPG\n",
-      "Full image path: ../../data/registered_images\\RC_0019_intraoperative.JPG\n",
       "Sheet: RC_0001_intraoperative.JPG\n",
       "Full image path: ../../data/registered_images\\RC_0001_intraoperative.JPG\n",
       "Sheet: RC_0002_intraoperative.JPG\n",
@@ -758,24 +682,24 @@
     "    Returns:\n",
     "        None\n",
     "    \"\"\"\n",
-    "    for method in [\"kmeans\", \"dbscan\", \"agglomerative\"]:\n",
-    "        sheet_num = 0\n",
-    "        # Iterate over all images and their bounding boxes\n",
-    "        for sheet, yolo_bbs in yolo_data.items():\n",
-    "            print(f\"Sheet: {sheet}\")\n",
-    "            full_image_path = os.path.join(PATH_TO_REGISTERED_IMAGES, sheet)\n",
-    "            print(f\"Full image path: {full_image_path}\")\n",
+    "    # Iterate over all images and their bounding boxes\n",
+    "    for sheet, yolo_bbs in yolo_data.items():\n",
+    "        print(f\"Sheet: {sheet}\")\n",
+    "        full_image_path = os.path.join(PATH_TO_REGISTERED_IMAGES, sheet)\n",
+    "        print(f\"Full image path: {full_image_path}\")\n",
     "\n",
-    "            # Call the analyze_sheet function with data from the loop\n",
-    "            time_bounding_boxes, number_bounding_boxes = select_relevant_bounding_boxes(\n",
-    "                yolo_bbs, full_image_path\n",
-    "            )\n",
+    "        # Call the analyze_sheet function with data from the loop\n",
+    "        time_bounding_boxes, number_bounding_boxes = select_relevant_bounding_boxes(\n",
+    "            yolo_bbs, full_image_path\n",
+    "        )\n",
     "\n",
-    "            # make erroneous bounding boxes -- simultaneously add and remove %5 of boxes\n",
-    "            time_bounding_boxes, number_bounding_boxes = erroneous_bounding_boxes(\n",
-    "                time_bounding_boxes, number_bounding_boxes\n",
-    "            )\n",
+    "        # make erroneous bounding boxes -- simultaneously add and remove %5 of boxes\n",
+    "        time_bounding_boxes, number_bounding_boxes = erroneous_bounding_boxes(\n",
+    "            time_bounding_boxes, number_bounding_boxes\n",
+    "        )\n",
     "\n",
+    "        for method in [\"kmeans\", \"dbscan\", \"agglomerative\"]:\n",
+    "            sheet_num = 0\n",
     "            # Now we need to cluster the bounding boxes that pertain to the same multi-digit number\n",
     "            if method == \"kmeans\":\n",
     "                time_labels = cluster_kmeans(time_bounding_boxes, [40, 41, 42])\n",
@@ -909,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -917,32 +841,32 @@
      "output_type": "stream",
      "text": [
       "Method: kmeans\n",
-      "Time labels: 774 correct clusters, 7 incorrect clusters. There were 24 undetected clusters. The accuracy is 93.98%.\n",
-      "Average distance when correct: 4.93px, incorrect: 7.61px, and overall: 4.95px\n",
+      "Time labels: 762 correct clusters, 21 incorrect clusters. There were 36 undetected clusters. The accuracy is 90.98%.\n",
+      "Average distance when correct: 4.90px, incorrect: 4.41px, and overall: 4.89px\n",
       "\n",
       "\n",
-      "Number labels: 369 correct clusters, 1 incorrect clusters. There were 11 undetected clusters. The accuracy is 94.21%.\n",
-      "Average distance when correct: 6.15px, incorrect: 4.56px, and overall: 6.15px\n",
+      "Number labels: 371 correct clusters, 2 incorrect clusters. There were 9 undetected clusters. The accuracy is 95.26%.\n",
+      "Average distance when correct: 6.55px, incorrect: 6.78px, and overall: 6.55px\n",
       "\n",
       "\n",
       "\n",
       "Method: dbscan\n",
-      "Time labels: 785 correct clusters, 28 incorrect clusters. There were 13 undetected clusters. The accuracy is 96.74%.\n",
-      "Average distance when correct: 4.85px, incorrect: 7.44px, and overall: 4.94px\n",
+      "Time labels: 768 correct clusters, 63 incorrect clusters. There were 30 undetected clusters. The accuracy is 92.48%.\n",
+      "Average distance when correct: 4.84px, incorrect: 6.84px, and overall: 5.00px\n",
       "\n",
       "\n",
-      "Number labels: 355 correct clusters, 11 incorrect clusters. There were 25 undetected clusters. The accuracy is 86.84%.\n",
-      "Average distance when correct: 6.13px, incorrect: 5.46px, and overall: 6.11px\n",
+      "Number labels: 353 correct clusters, 10 incorrect clusters. There were 27 undetected clusters. The accuracy is 85.79%.\n",
+      "Average distance when correct: 6.56px, incorrect: 6.30px, and overall: 6.56px\n",
       "\n",
       "\n",
       "\n",
       "Method: agglomerative\n",
-      "Time labels: 776 correct clusters, 8 incorrect clusters. There were 22 undetected clusters. The accuracy is 94.49%.\n",
-      "Average distance when correct: 4.86px, incorrect: 8.04px, and overall: 4.89px\n",
+      "Time labels: 760 correct clusters, 24 incorrect clusters. There were 38 undetected clusters. The accuracy is 90.48%.\n",
+      "Average distance when correct: 4.90px, incorrect: 5.12px, and overall: 4.91px\n",
       "\n",
       "\n",
-      "Number labels: 363 correct clusters, 11 incorrect clusters. There were 17 undetected clusters. The accuracy is 91.05%.\n",
-      "Average distance when correct: 6.21px, incorrect: 4.88px, and overall: 6.17px\n",
+      "Number labels: 363 correct clusters, 6 incorrect clusters. There were 17 undetected clusters. The accuracy is 91.05%.\n",
+      "Average distance when correct: 6.58px, incorrect: 4.68px, and overall: 6.55px\n",
       "\n",
       "\n",
       "\n"
@@ -1108,7 +1032,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1122,7 +1046,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
